[tool.poetry]
name = "vicmap-tiles"
version = "0.1.0"
description = ""
authors = ["Sam Thompson <chompar4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.13.3"
numpy = "^1.19.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
